# search_engine

./: CMakeLists.txt  README.md  convert.hpp  main.cpp  rel_struct.hpp  search_server.hpp
include/: convert.h  entry_struct.h  inv_index.h  rel_struct.h  search_server.h
resources/: answers.json  config.json  requests.json
resources/files/: file001.txt  file002.txt
src/: config.json  convert.cpp  inv_index.cpp  search_server.cpp
test/: inv_index_test.cpp  search_server_test.cpp
